--- a/Workshop ExpressJS and Templating/Movie-Magic-Workshop/package.json
+++ b/Workshop ExpressJS and Templating/Movie-Magic-Workshop/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
-
   },
   "keywords": [],
   "author": "",
@@ -15,6 +14,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2"
   }
 }
